<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

        <!-- Title -->
        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp" />

        <!-- Phone Number -->
        <EditText
            android:id="@+id/etLoginPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="phone"
            android:autofillHints="phone"/>

        <!-- Password -->
        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:backgroundTint="@color/purple_500"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginTop="16dp" />

        <!-- Register Redirect -->

        <TextView
            android:id="@+id/tvNoAccountRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_register"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>


</LinearLayout>